Fix link layer bleeding out the container

--- a/source/stylesheets/basscss/_theme.scss
+++ b/source/stylesheets/basscss/_theme.scss
@@ -134,6 +134,10 @@ header {
 
 .insta-people {
 
+  li {
+    position: relative;
+  }
+
   .link-layer {
     position: absolute;
     width: 100%;
